src/index.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,600&display=swap");

:root {
  font-family: "DM Sans", sans-serif;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  --off-white: #eef0f2;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: var(--off-white);
  font-weight: 400;
}

body {
  content: "";
  z-index: -1;
}

svg {
  width: 25px;
  height: 25px;
}

.main {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow-y: hidden;
  background-color: rgba(0, 0, 0, 0.5);
}

.search {
  text-align: center;
  padding: 1rem 1rem 0.5rem 1rem;
}

.search input {
  font-family: "DM Sans", sans-serif;
  font-size: 1rem;
  background: rgba(255, 255, 255, 0.1);
  padding: 0.5rem 0.5rem;
  border: 2px solid rgba(255, 255, 255, 0);
  outline: 1px solid var(--off-white);
  min-width:0;
  width: 12%
}

.search input::placeholder {
  color: rgba(255, 255, 255, 0.5);
  opacity: 1;
}

.findMe {
  text-align: center;
}

.findMeButton {
  font-family: "DM Sans", sans-serif;
  font-size: 1rem;
  background: var(--off-white);
  border: 2px solid var(--off-white);
  color: black;
  padding: 0.5rem 0.5rem;
  min-width:0;
  width: 12%
}

.search input:focus {
  border: 2px solid #0060DF;
  outline: 2px solid var(--off-white);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  position: relative;
  margin: auto;
  max-width: 550px;
  height: 550px;
  top: 20%;
}

.temps p {
  font-size: 5rem;
  font-weight: 600;
}

.weather-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.weather-container img {
  width: 50px;
  height: 50px;
}

.bottom {
  display: flex;
  justify-content: space-evenly;
  width: 90%;
  margin: auto;
  padding: 1rem;
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 3px;
}

@media (min-width: 20em) {
  body {
    background: url(./assets/backgrounds/1920.webp) no-repeat center center/cover;
  }
}

@media (min-width: 135em) {
  body {
    background: url(./assets/backgrounds/2400.webp) no-repeat center center/cover;
  }
}

